Closed Bug 153470 Opened 23 years ago Closed 23 years ago

Cannot enter some puntuation marks with some SC IMEs on non-SC Windows 2000

Categories

(Core :: Internationalization, defect)

x86
Windows 2000
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla1.2beta

People

(Reporter: ruixu, Assigned: tetsuroy)

References

Details

(Keywords: intl, topembed+, Whiteboard: [adt3])

Attachments

(1 file, 1 obsolete file)

Build: 2002062008 trunk. OS: English Windows 2000 + SP2 (SC IMEs pre-installed) This is a separate bug from bug 146844. Using some SC IMEs, e.g. NeiMa, GBK, WuBi, ZhengMa, etc..., cannot enter some double byte puntuation marks, e.g. ",", ".", "?", etc...
Severity: normal → major
Keywords: intl, nsbeta1
It is also reproducible on JA Windows 2000 + SP2 (SC IMEs is pre-installed).
Summary: Cannot enter some puntuation marks with some SC IMEs on English Windows → Cannot enter some puntuation marks with some SC IMEs on non-native Windows 2000
Summary: Cannot enter some puntuation marks with some SC IMEs on non-native Windows 2000 → Cannot enter some puntuation marks with some SC IMEs on non-SC Windows 2000
shanjian: can you review?
Comment on attachment 88979 [details] [diff] [review] Use IsDBCSLeadByteEx() to specifiy the current IME CodePage looks reasonable. r=shanjian
Attachment #88979 - Flags: review+
kin: can you super review?
Status: NEW → ASSIGNED
Comment on attachment 88979 [details] [diff] [review] Use IsDBCSLeadByteEx() to specifiy the current IME CodePage sr=kin@netscape.com
Attachment #88979 - Flags: superreview+
fix checked into the trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.0.1
I am opening it. We discovered the patch didn't cover all the cases. (it fixed all CJK OSs, but not English OS) I found that we are receiving one WM_CHAR msg (with wParam > 0xff) on Enlish OS. CJK OSs, however, we are receiving 2 WM_CHAR msgs (with wParam <= 0xff). Patch to follow
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: mozilla1.0.1 → mozilla1.2beta
shanjian: can you review?
Attachment #88979 - Attachment is obsolete: true
Comment on attachment 89426 [details] [diff] [review] pass WM_CHAR::wParam to OnChar and use isMultiByte r=shanjian.
Attachment #89426 - Flags: review+
Comment on attachment 89426 [details] [diff] [review] pass WM_CHAR::wParam to OnChar and use isMultiByte sr=kin@netscape.com
Attachment #89426 - Flags: superreview+
checked into the trunk
Status: REOPENED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
Verified fixed on 2002062804 trunk.
Status: RESOLVED → VERIFIED
nsbeta1+ adt3 since non native Chinese OS do not have the problem.
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt3]
nominating for adt1.0.1 and topembed
Keywords: adt1.0.1, topembed
Attachment #89426 - Flags: approval+
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+" keyword and add the "fixed1.0.1" keyword.
This bug affects SC major IMEs on English os, so far only MSPinYin IME is working, but it is not a Chinese standrad IME recommended by China government, and only a few people use this IME. The popular SC IMEs in China are QuanPin, ShuangPin and Wubi. This bug is tested on trunk with a full test pass, no broken is found, so suggest to check in to branch. As work around, use MSPinYin IME to input puntuation marks, or input puntuation marks into some other applications 1st, then copy and paste.
adding adt1.0.1+. Please check this into the branch today if possible.
Keywords: adt1.0.1adt1.0.1+
Checked into the 1.0 branch
Verified on 2002070308 1.0 branch.
Blocks: 143047
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: