Bug 153470 Use IsDBCSLeadByteEx() instead of IsDBCSLeadByte() to allow specifying the current IME code point. IME input method improvement /r=shanjian;/sr=kin